--- a/ethereum_yellow_paper_cn.tex
+++ b/ethereum_yellow_paper_cn.tex
@@ -52,9 +52,9 @@
 %\pagecolor{lightpink}
 
 \begin{abstract}
-由密码学安全交易（cryptographically-secured transactions）所构成的区块链范例，已经通过一系列项目展示了它的实用性，不止是比特币。每一个这类项目都可以看作是一个基于去中心化的单实例计算资源所构建的简单应用程序。我们可以把这种范例称为具有共享状态（shared-state）的交易化单例状态机（transactional singleton machine）。
+由密码学安全交易（cryptographically-secured transactions）所构成的区块链范式，已经通过一系列项目展示了它的实用性，不止是比特币。每一个这类项目都可以看作是一个基于去中心化的单实例计算资源所构建的简单应用程序。我们可以把这种范式称为具有共享状态（shared-state）的交易化单例状态机（transactional singleton machine）。
 
-以太坊以更通用的方式实现了这种范例。它提供了大量的资源，每一个资源都拥有独立的状态和操作码，并且可以通过消息传递方式和其它资源交互。我们将讨论它的设计、实现上的问题、它所提供的机遇以及我们所设想的未来障碍。
+以太坊以更通用的方式实现了这种范式。它提供了大量的资源，每一个资源都拥有独立的状态和操作码，并且可以通过消息传递方式和其它资源交互。我们将讨论它的设计、实现上的问题、它所提供的机遇以及我们所设想的未来障碍。
 \end{abstract}
 
 \maketitle
@@ -97,9 +97,9 @@
 
 %E language?
 
-\section{区块链范例} \label{ch:overview}
+\section{区块链范式} \label{ch:overview}
 
-以太坊在整体上可以看作一个基于交易的状态机：起始于一个创世块（Genesis）状态，然后随着交易的执行状态逐步改变一直到最终状态，这个最终状态是以太坊世界的权威“版本”。状态中包含的信息有：账户余额、名誉度、信誉度、现实世界的附属数据等；简而言之，能包含电脑可以描绘的任何信息。而交易则成为了连接两个状态的有效桥梁；“有效”非常重要——因为无效的状态改变远超过有效的状态改变。例如：无效的状态改变可能是减少账号余额，但是没有在其它账户上加上同等的额度。一个有效的状态转换是通过交易进行的。可以正式地描述为：
+以太坊在整体上可以看作一个基于交易的状态机：起始于一个创世区块（Genesis）状态，然后随着交易的执行状态逐步改变一直到最终状态，这个最终状态是以太坊世界的权威“版本”。状态中包含的信息有：账户余额、名誉度、信誉度、现实世界的附属数据等；简而言之，能包含电脑可以描绘的任何信息。而交易则成为了连接两个状态的有效桥梁；“有效”非常重要——因为无效的状态改变远超过有效的状态改变。例如：无效的状态改变可能是减少账号余额，但是没有在其它账户上加上同等的额度。一个有效的状态转换是通过交易进行的。可以正式地描述为：
 \begin{equation}
 \boldsymbol{\sigma}_{t+1} \equiv \Upsilon(\boldsymbol{\sigma}_t, T)
 \end{equation}
@@ -118,72 +118,70 @@ B & \equiv & (..., (T_0, T_1, ...) ) \\
 \Pi(\boldsymbol{\sigma}, B) & \equiv & \Omega(B, \Upsilon(\Upsilon(\boldsymbol{\sigma}, T_0), T_1) ...)
 \end{eqnarray}
 
-其中 $\Omega$ 是区块定稿状态转换函数（这个函数奖励一个特定的账户）； $B$ 表示一个区块，包含一系列交易作为其组成部分； $\Pi$ 是区块级的状态转换函数。
+其中 $\Omega$ 是区块定稿状态转换函数（这个函数奖励一个特定的账户）；$B$ 表示一个区块，包含一系列交易作为其组成部分；$\Pi$ 是区块级的状态转换函数。
 
-这就是区块链范例的基础，这个模型不仅是以太坊的基础，还是迄今为止所有基于共识的去中心化交易系统的基础。
+这就是区块链范式的基础，这个模型不仅是以太坊的基础，还是迄今为止所有基于共识的去中心化交易系统的基础。
 
 
 \subsection{面值}
 
-为了激励网络中的计算，需要定义一种转账方法。以太坊设计了一种内置货币以太币(Ether)，ETH是大家所熟知的符号，有时用 \DH{} 表示。以太币最小的面额是Wei(伟)，所有货币值都以Wei的整数倍记录。一个以太币等于 $10^{18}$ Wei 。不同的面值如下表:
+为了激励网络中的计算，需要一种公允地转移价值的方法。为了解决这个问题，以太坊设计了一种内置的货币——以太币（Ether），也就是我们所知的 ETH，有时也用古英语中的 \DH{} 表示。以太币最小的面额是 Wei（伟），所有货币值都以 Wei 的整数倍来记录。一个以太币等于 $10^{18}$ Wei。以太币还有以下面额：
 
 \par
 \begin{center}
 \begin{tabular}{rl}
 \toprule
-倍数 & 面值 \\
+倍数 & 面额 \\
 \midrule
-$10^0$ & Wei(伟) \\
-$10^{12}$ & Szabo(萨博) \\
-$10^{15}$ & Finney(芬尼) \\
-$10^{18}$ & Ether(以太) \\
+$10^0$ & Wei（伟） \\
+$10^{12}$ & Szabo（萨博） \\
+$10^{15}$ & Finney（芬尼） \\
+$10^{18}$ & Ether（以太） \\
 \bottomrule
 \end{tabular}
 \end{center}
 \par
 
-在整个工作中，任何涉及到价值、以太币相关的、货币、余额或者支付，都以Wei作为单位来计算。
+在当前状况下，任何价值的标示、以太币上下文、货币、余额或者支付，都应以 Wei 为单位来计算。
 
 \subsection{历史?}
 
-因为这是一个去中心化的系统，所有人都有机会在之前的某一个区块创建新的区块并连接在其后，这会行成一个树状的区块。为了能在这个树状结构上从根节点（创世块）到叶子节点（包含最新交易的区块）能形成一个一致的区块链,必须有一个共识方案。如果有人认为从根节点到叶子节点的路径不是最佳的区块链，那这时候就会发生分叉。
+因为这是一个去中心化的系统，所有人都有机会在之前的某一个区块之后创建新的区块，这必然会形成一个区块树。为了能在这个区块树上从根节点（创世区块）到叶节点（包含最新交易的区块）形成一个一致的区块链，必须有一个共识方案。如果各个节点所认为的从根节点到叶节点的路径（最佳区块链）不同，那么就会发生分叉。
 
-这就意味着在一个给定的时间点，系统中会有多个状态共存：一些节点相信一个区块是包含权威的交易，其它节点则相信另外一些区块包含权的交易，其中就包含彻底不同或者不兼容的交易。这一点必须要避免，因为它会破坏整个系统信用。
+这就意味着在一个给定的时间点，系统中会有多个状态共存：一些节点相信一个区块包含权威的交易，其它节点则相信另外的区块包含权威的交易，其中就包含彻底不同或者不兼容的交易。必须要不惜一切代价避免这点，因为它会破坏整个系统信用。
 
 
-我们使用了一个简易 GHOST 协议版本来达成共识，参见 \cite{cryptoeprint:2013:881} 。我们会在小结 \ref{ch:ghost} 详细说明。
+我们使用了一个简易的 GHOST 协议版本来达成共识，参见 \cite{cryptoeprint:2013:881}。我们会在第 \ref{ch:ghost} 章中详细说明。
 
-有时会从一个特定的区块链高度启用新的协议。本文描述了协议的一个版本，如果要跟踪历史区块链路径，可能需要查看这份文档的历史版本。(译者注: 可以到 https://github.com/ethereum/yellowpaper 查看英文版历史版本)
+有时会从一个特定的区块链高度启用新的协议。本文描述了协议的一个版本，如果要跟踪历史区块链路径，可能需要查看这份文档的历史版本。（译者注：可以到 https://github.com/ethereum/yellowpaper 查看英文版历史版本。）
 
 \section{约定}\label{ch:conventions}
 
-我们用了大量的印刷约定表示公式中的符号，其中一些需要特别说明：
+我使用了大量的排印约定来表示公式中的符号，其中一些需要特别说明：
 
-有两个高度结构化的顶层状态值,使用粗体小写希腊字母: $\boldsymbol{\sigma}$  表示世界状态(world-state);  $\boldsymbol{\mu}$ 表示机器状态（machine-state）。
+有两个高度结构化的顶层状态值，用粗体小写希腊字母 $\boldsymbol{\sigma}$ 表示世界状态（world-state）；用 $\boldsymbol{\mu}$ 表示机器状态（machine-state）。
 
-作用在高度结构化数据上的函数，使用大写的希腊字母，例如： $\Upsilon$ ，是以太坊中的状态转换函数。
+作用在高度结构化数据上的函数，使用大写的希腊字母，例如：$\Upsilon$，是以太坊中的状态转换函数。
 
-对于大部分函数来说，通常用一个大写的字母表示，例如：$C$，表示费用函数。可能会使用下角标表示一些特别的变量，例如：$C_\text{\tiny SSTORE}$，表示执行 {\tiny SSTORE} 操作的费用函数。对于一些可能是外部定义的函数，可能会使用打印机文字字体，例如：$\texttt{KEC512}$ 哈希函数,使用 $\texttt{KEC}$ 表示。$\texttt{KEC512}$  表示 Keccack-512 哈希函数。
+对于大部分函数来说，通常用一个大写的字母表示，例如：$C$ 是总体费用函数。此外，可能会使用下角标表示一些特别的变量，例如：$C_\text{\tiny SSTORE}$ 是执行 {\tiny SSTORE} 操作的费用函数。对于一些可能是外部定义的函数，我可能会使用打印机文字字体，例如使用 $\texttt{KEC}$ 来表示 $\texttt{KEC512}$ 哈希函数。$\texttt{KEC512}$ 表示 Keccack-512 哈希函数。
 
-元组通常使用一个大写字母，例如：$T$，表示一个以太坊交易。使用下标可能会表示一个独立的变量,例如： $T_n$ ，表示交易中随机数。角标形式用于表示它们的类型；例如：大写的下角标表示元组包含的下角标变量。
+元组通常使用一个大写字母来表示，例如用 $T$ 表示一个以太坊交易。也可以通过使用下标来表示其中的一个独立组成部分，例如用 $T_n$ 来表示交易的 nonce。下角标形式则用于表示它们的类型；例如：大写的下角标表示下角标所对应的组成部分所构成的元组。
 
-标量和固定大小的字节序列（或数组）都使用小写字母来表示，例如： $n$ 在本文中表示交易随机数。小写的希腊字母一般表示一些特别的含义，例如：$\delta$ 表示在栈上一个给定操作需要的条目数量。
+标量和固定大小的字节序列（或数组）都使用小写字母来表示，例如 $n$ 在本文中表示交易的 nonce。小写的希腊字母一般表示一些特别的含义，例如 $\delta$ 表示在栈上一个给定操作所需要的条目数量。
 
-任意长度的序列通常用加粗的小写字母表示，例如 $\mathbf{o}$ 表示消息调用中输出的数据字节序列。有时候，会对特别重要的值使用粗体。
+任意长度的序列通常用粗体小写字母表示，例如 $\mathbf{o}$ 表示消息调用中输出的字节序列数据。对于特别重要的值，可能会使用粗体大写字母。
 
-我们认为标量都是正整数且属于集合 $\mathbb{P}$。所有的字节序列属于集合 $\mathbb{B}$，附录 \ref{app:rlp} 给出了正式的定义。用下角标表示这样的序列集合限制在一定长度以内，长度为 32 的字节序列使用 $\mathbb{B}_{32}$ 表示，所有比 $2^{256}$ 小的正整数使用 $\mathbb{P}_{256}$ 表示。详细定义见 \ref{ch:block}。
+我们认为标量都是正整数且属于集合 $\mathbb{P}$。所有的字节序列属于集合 $\mathbb{B}$，附录 \ref{app:rlp} 给出了正式的定义。可以用下角标表示这样的序列集合的限定长度，因此，长度为 32 的字节序列使用 $\mathbb{B}_{32}$ 表示，所有比 $2^{256}$ 小的正整数使用 $\mathbb{P}_{256}$ 表示。详细定义参见 \ref{ch:block}。
 
-使用方括号表示序列中的一个元素或子序列,例如： $\boldsymbol{\mu}_\mathbf{s}[0]$ 表示栈中的第一个条目。对于子序列来说，使用省略号表示一定的范围，且含首尾限制，例如：$\boldsymbol{\mu}_\mathbf{m}[0..31]$ 表示计算机内存中的前32个条目。
+使用方括号表示序列中的一个元素或子序列，例如 $\boldsymbol{\mu}_\mathbf{s}[0]$ 表示虚拟机栈中的第一个条目。对于子序列来说，使用省略号表示一定的范围，且含首尾限制，例如 $\boldsymbol{\mu}_\mathbf{m}[0..31]$ 表示虚拟机内存中的前 32 个条目。
 
-在全局状态的情况下，σ 是一个含多个账号的序列，本身的数组，方形括号被用作去表示一个单独的账号。
+以全局状态 $\boldsymbol{\sigma}$ 为例，它表示一系列的账户（账户自身是元组），方括号被用来表示一个独立的账户。
 
-以全局状态 $\boldsymbol{\sigma}$ 为例，它表示一系列的账户，它们自身的元组，方括号用于表示一个独立的账户。
+当去考虑现有的变量时，我遵循在给定的范围内去定义的原则，如果我们使用占位符 $\Box$ 表示未修改的“输入”值，那么就可以使用 $\Box'$ 来表示修改过的可用值，$\Box^*$，$\Box^{**}$ \&c 表示中间值。在特殊情况下，为了提高可读性和清晰性，我可能会使用字母-数字下角标表示中间值。
 
-当去考虑现有的变量时，我们遵循在给定的范围内去定义的原则，使用占位符 $\Box$ 表示未修改的输入变量，使用 $\Box'$ 表示修改的和可用的变量，$\Box^*$， $\Box^{**}$ \&c 表示中间变量。在特殊情况下，为了提高可读性和清晰性，我可能会使用字母-数字下角标表示中间值。
+当使用已有的函数时，例如一个给定函数 $f$，函数 $f^*$ 表示一个相似的、对集合中所有元素都生效的函数映射。正式定义参见 \ref{ch:block}。
 
-当使用已有的函数时，给定一个函数 $f$,那么函数 $f^*$ 表示一个相似的、替换序列的函数映射。详细定义见 \ref{ch:block}。
-
-整个过程中，我们定义了大量的函数。一个常见的函数是 $\ell$，表示给定序列的最后一个条目：
+以上，我定义了大量的函数。一个最常见的函数是 $\ell$，它表示给定序列中的最后一个条目：
 
 
 \begin{equation}
@@ -191,9 +189,9 @@ $10^{18}$ & Ether(以太) \\
 \end{equation}
 
 
-\section{块、状态和交易} \label{ch:bst}
+\section{区块、状态和交易} \label{ch:bst}
 
-介绍了以太坊的基本概念后,我们将详细地讨论交易、区块和状态的含义。
+在介绍了以太坊的基本概念之后，我们将详细地讨论交易、区块和状态的含义。
 
 \subsection{世界状态} \label{ch:state}
 
