--- a/ethereum_yellow_paper_cn.tex
+++ b/ethereum_yellow_paper_cn.tex
@@ -78,6 +78,7 @@
 
 总的来说，我希望能提供一个系统，来给用户提供一些保证：无论是与其他个体、系统还是组织进行交互，他们都能完全信任可能的结果以及产生结果的过程。
 
+
 \subsection{前人工作} \label{ch:previous}
 
 \cite{buterin2013ethereum} 在 2013 年 11 月下旬第一次提出了这种系统的核心机制。虽然现在已经在很多方面都有了进化，但其核心特性没有变化。那就是：这是一个具有图灵完备的语言和实质上具有无限的内部交易数据存储容量的区块链。
@@ -107,7 +108,7 @@
 
 $\Upsilon$ 是以太坊状态转换函数。在以太坊中，$\Upsilon$ 和 $\boldsymbol{\sigma}$ 比已有的任何比较系统都强; $\Upsilon$ 可以执行任意计算，而 $\boldsymbol{\sigma}$ 可以储存交易中的任意状态。
 
-区块中记录着交易信息；区块之间通过密码学哈希（hash）以引用的方式链接起来。区块以流水账的方式组织起来，每个区块保留若干交易数据和前一个区块的医用，加上一个最终状态的标示符（最终状态本身不会保存到区块中——否则区块就太大了）。系统激励节点去挖矿（mine）。这种激励作为状态转换函数而发生，会给指定的账户增加价值（即给指定的账户分配挖矿奖励，校订注）。
+区块中记录着交易信息；区块之间通过密码学哈希（hash）以引用的方式链接起来。区块以流水账的方式组织起来，每个区块保留若干交易数据和前一个区块的引用，加上一个最终状态的标识符（最终状态本身不会保存到区块中——否则区块就太大了）。系统激励节点去挖矿（mine）。这种激励作为状态转换函数而发生，会给指定的账户增加价值（即给指定的账户分配挖矿奖励，校订注）。
 
 挖矿就是通过付出一定的努力（工作量）来与其它潜在的区块竞争一系列交易（一个区块）的记账权。它是通过密码学安全证明来实现的。这个机制就是工作量证明（proof-of-work），会在 \ref{ch:pow} 详细讨论。
 
@@ -196,14 +197,14 @@ $10^{18}$ & Ether（以太） \\
 \subsection{世界状态} \label{ch:state}
 
 
-世界状态是在地址（160 位的标志符）和账户状态（序列化为RLP的数据结构，详见附录 \ref{app:rlp}）的映射。虽然世界状态没有直接储存在区块链上，但会假定在实施过程中会将这个映射维护在一个修改过的 Merkle Patricia 树(简称 trie,字典树,详见附录 \ref{app:trie}）。字典树需要一个简单的后端数据库去维护字节数组到字节数组的映射；我们称这个后端数据库为状态数据库。它有一系列的好处: 第一,这个结构的根节点是加密的且依赖于所有的内部数据，它的哈希可以作为整个系统状态的一个安全标志;第二，作为一个不变的数据结构，因此它允许任何一个之前状态（根部哈希已知的条件下）通过简单地改变根部哈希值而被召回。因为我们在区块链中储存了所以这样的根部哈希值，所以我们能恢复到指定的历史状态。
+世界状态（state）是在地址（160 位的标识符）和账户状态（序列化为 RLP 的数据结构，详见附录 \ref{app:rlp}）的映射。虽然世界状态没有直接储存在区块链上，但会假定在实施过程中会将这个映射维护在一个修改过的 Merkle Patricia 树上（即 trie，详见附录 \ref{app:trie}）。这个 trie 需要一个简单的后端数据库去维护字节数组到字节数组的映射；我们称这个后端数据库为状态数据库。它有一系列的好处: 第一，这个结构的根节点是基于密码学依赖于所有内部数据的，它的哈希可以作为整个系统状态的一个安全标识；第二，作为一个不变的数据结构，我们可以通过简单地改变根节点哈希来召回任何一个先前的状态（在根节点哈希已知的条件下）。因为我们在区块链中储存了所以这样的根节点哈希值，所以我们可以很容易地恢复到特定的历史状态。
 
 账户状态包含以下四个字段：
 \begin{description}
-\item[nonce,随机数] 这个值等于账户发出的交易数及这个账户创建的合约数量之和。 $\boldsymbol{\sigma}[a]_n$ 表示状态 $\boldsymbol{\sigma}$ 中的地址 $a$ 的 nonce 值。
-\item[balance,余额] $\boldsymbol{\sigma}[a]_b$，表示这个账户拥有多少 Wei。
-\item[storageRoot,存储根节点] 保存账户内容的 Merkle Patricia 树根节点的 256 位哈希编码到字典树中，作为从 256 位整数键值哈希的Keccak 256 位哈希到 256 位整数的 RLP-编码映射。这个哈希定义为 $\boldsymbol{\sigma}[a]_s$。
-\item[codeHash,代码哈希] 这个账户的 EVM(Ethereum Virtual Machine,以太坊虚拟机)代码哈希值---代码执行时,这个地址会接收一个消息调用; 它和其它字段不同，创建后不可更改。状态数据库中包含所有像这样的代码片段哈希，以便后续使用。 这个哈希定义为 $\boldsymbol{\sigma}[a]_c$,$\mathbf{b}$ 表示代码， $\texttt{\small KEC}(\mathbf{b}) = \boldsymbol{\sigma}[a]_c$.
+\item[nonce] 这个值等于由此账户地址发出的交易数量，或者由这个账户所创建的合约数量（当这个账户有关联代码时）。$\boldsymbol{\sigma}[a]_n$ 即表示状态 $\boldsymbol{\sigma}$ 中的地址 $a$ 的 nonce 值。
+\item[balance（余额）] $\boldsymbol{\sigma}[a]_b$，表示这个账户地址拥有多少 Wei。
+\item[storageRoot（存储根）] 保存了账户的存储内容的 Merkle Patricia 树的根节点的 256 位哈希值，这个树中保存的是 256 位整数键值的 Keccak 256 位哈希值到 256 位整数值的 RLP 编码的映射。这个哈希定义为 $\boldsymbol{\sigma}[a]_s$。
+\item[codeHash（代码哈希）] 这个账户的 EVM 代码哈希值——当这个地址接收到一个消息调用时，这些代码会被执行；它和其它字段不同，创建后不可更改。状态数据库中包含所有这样的代码片段哈希，以便后续使用。这个哈希可以定义为 $\boldsymbol{\sigma}[a]_c$，然后我们用 $\mathbf{b}$ 来表示代码，则有 $\texttt{\small KEC}(\mathbf{b}) = \boldsymbol{\sigma}[a]_c$。
 \end{description}
 
 
